feature: header complete
*layout for header
*colors
*getting data from parse-api

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+    --accent: #EB5E28;
+    --dark: #252422;
+    --dark-low: #403D39;
+    --light: #FFFCF2;
+    --light-low: #CCC5B9;
+}
