--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,9 @@
-<p>header works!</p>
+<header class="header">
+    <div class="header__wrapper" *ngIf="exchange$ | async as exchange">
+        <div class="header__currency" *ngFor="let currency of exchange">
+            <div class="header__currency-name">{{currency.cc}}</div>
+            <div class="header__currency-rate">&nbsp;|&nbsp;{{currency.rate}}</div>
+        </div>
+    </div>
+    <div class="header__line"></div>
+</header>
