--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto');
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined');
 
 body {
     font-family: 'Roboto';
+    background: var(--dark);
 }
