--- a/src/app/converter-page/converter-page.component.html
+++ b/src/app/converter-page/converter-page.component.html
@@ -1,15 +1,15 @@
 <section class="converter" *ngIf="exchange$ | async as exchange">
     <div class="converter__field">
-        <select class="converter__currency" [formControl]="selectCurrency">
+        <select class="converter__currency" [formControl]="selectCurrency" (change)="calculateHryvnia()">
             <option *ngFor="let currency of exchange" [value]="currency.cc">{{currency.cc}}</option>
         </select>
-        <input class="converter__input" [formControl]="customCurrency" type="number">
+        <input class="converter__input" [formControl]="customCurrency" type="number" (change)="calculateHryvnia()">
     </div>
 
     <span class="material-symbols-outlined converter__image"> currency_exchange </span>
 
     <div class="converter__currency"> UAH </div>
     <div class="converter__field">
-        <input class="converter__input" [formControl]="hryvnia" type="number">
+        <input class="converter__input" [formControl]="hryvnia" type="number" (change)="calculateCustomCurrency()">
     </div>
 </section>
